# carrinho_de_compras_rust

./: .gitignore  README.md
backend/: Cargo.toml  Rocket.toml
backend/migrations/00000000000001_create_usuarios/: up.sql
backend/migrations/00000000000002_create_categorias/: up.sql
backend/migrations/00000000000003_create_produtos/: up.sql
backend/migrations/00000000000004_create_carrinhos/: down.sql  up.sql
backend/migrations/00000000000005_create_itens_carrinho/: down.sql  up.sql
backend/migrations/00000000000006_create_pedidos/: up.sql
backend/migrations/00000000000007_create_itens_pedido/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/config/: app_config.rs  cors.rs  database.rs  mod.rs
backend/src/controllers/: auth_controller.rs  carrinho_controller.rs  categoria_controller.rs  mod.rs  pedido_controller.rs  produto_controller.rs
backend/src/database/: seed.rs
backend/src/entities/: enums.rs
backend/src/errors/: app_error.rs
backend/src/middlewares/: auth_guard.rs
backend/src/models/: carrinho.rs  categoria.rs  item_carrinho.rs  item_pedido.rs  mod.rs  pedido.rs  produto.rs  usuario.rs
backend/src/repositories/: carrinho_repository.rs  categoria_repository.rs  item_carrinho_repository.rs  item_pedido_repository.rs  mod.rs  pedido_repository.rs  produto_repository.rs  usuario_repository.rs
backend/src/routes/: api.rs
backend/src/schemas/: auth_dto.rs  carrinho_dto.rs  categoria_dto.rs  mod.rs  pedido_dto.rs  produto_dto.rs
backend/src/services/: auth_service.rs  mod.rs  (+4 more)
backend/tests/: integration_tests.rs
(+30 files in other folders)
